Create two lists

--- a/pull-up.html
+++ b/pull-up.html
@@ -32,3 +32,11 @@ else:
   print("ќбщее количество подт€гиваний", amount)
 
 New feature
+
+l = []
+for _ in range(int(input())):
+    l.append(input())
+
+k = []
+for _ in range(int(input())):
+    k.append(input())
