--- a/pull-up.html
+++ b/pull-up.html
@@ -40,3 +40,10 @@ for _ in range(int(input())):
 k = []
 for _ in range(int(input())):
     k.append(input())
+
+for i in l:
+    for g in k:
+        if g not in i:
+            breack
+    else:
+        print(i)
