--- a/pull-up.html
+++ b/pull-up.html
@@ -38,7 +38,8 @@ for _ in range(int(input())):
     l.append(input())
 
 k = []
-for _ in range(int(input())):
+g = int(input())
+for i in range(g):
     k.append(input())
 
 for i in l:
