--- a/pull-up.html
+++ b/pull-up.html
@@ -38,6 +38,5 @@ for _ in range(int(input())):
     l.append(input())
 
 k = []
-g = int(input())
-for i in range(g):
+for i in range(int(input())):
     k.append(input())
