--- a/pull-up.html
+++ b/pull-up.html
@@ -39,7 +39,7 @@ for _ in range(int(input())):
 
 k = []
 g = int(input())
-for i in range(g):
+for _ in range(g):
     k.append(input())
 
 for i in l:
